--- a/pizzeria-console-objet/pom.xml
+++ b/pizzeria-console-objet/pom.xml
@@ -30,7 +30,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-jar-plugin</artifactId>
-					<version>3.0.2</version>
+					<version>2.4</version>
 					<configuration>
 						<archive>
 							<index>true</index>
@@ -51,6 +51,20 @@
 				<execution><goals><goal>shade</goal></goals></execution>
 			</executions>
      	</plugin>
+     	<plugin>
+        	<groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-source-plugin</artifactId>
+            <version>3.0.1</version>
+            <executions>
+            	<execution>
+                	<id>attach-sources</id>
+                    <phase>package</phase>
+                    <goals>
+                    	<goal>jar-no-fork</goal>
+                    </goals>
+                 </execution>
+            </executions>
+         </plugin>
      </plugins>
 	</build>
 </project>	
