--- a/pizzeria-maven/pizzeria-model/pom.xml
+++ b/pizzeria-maven/pizzeria-model/pom.xml
@@ -8,5 +8,11 @@
   </parent>
   <artifactId>pizzeria-model</artifactId>
   
+  <dependencies>
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  	</dependency>
+  </dependencies>
 
 </project>
