--- a/pizzeria-maven/pom.xml
+++ b/pizzeria-maven/pom.xml
@@ -44,6 +44,12 @@
 	    <artifactId>reflections</artifactId>
 	    <version>${reflection.vers}</version>
 	</dependency>
+		<dependency>
+	    <groupId>junit</groupId>
+	    <artifactId>junit</artifactId>
+	    <version>4.12</version>
+	    <scope>test</scope>
+	</dependency>
 </dependencies>
 </dependencyManagement>
 
