Ajout de plein de trucs

--- a/pizzeria-maven/pizzeria-service/pom.xml
+++ b/pizzeria-maven/pizzeria-service/pom.xml
@@ -13,6 +13,14 @@
 		<groupId>${project.groupId}</groupId>
 		<artifactId>pizzeria-model</artifactId>
 	</dependency>
+  	<dependency>
+		<groupId>mysql</groupId>
+		<artifactId>mysql-connector-java</artifactId>
+	</dependency>
+	<dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-collections4</artifactId>
+</dependency>
 </dependencies>
 
 
