--- a/pizzeria-maven/pizzeria-ihm/pom.xml
+++ b/pizzeria-maven/pizzeria-ihm/pom.xml
@@ -29,6 +29,10 @@
 	    <groupId>junit</groupId>
 	    <artifactId>junit</artifactId>
 	</dependency>
+		<dependency>
+		<groupId>mysql</groupId>
+		<artifactId>mysql-connector-java</artifactId>
+	</dependency>
   </dependencies>
   
   <build>
