--- a/pizzeria-maven/pizzeria-ihm/pom.xml
+++ b/pizzeria-maven/pizzeria-ihm/pom.xml
@@ -33,6 +33,14 @@
 		<groupId>mysql</groupId>
 		<artifactId>mysql-connector-java</artifactId>
 	</dependency>
+		<dependency>
+	    <groupId>org.hibernate.javax.persistence</groupId>
+	    <artifactId>hibernate-jpa-2.1-api</artifactId>
+	</dependency>
+	<dependency>
+	    <groupId>org.hibernate</groupId>
+	    <artifactId>hibernate-entitymanager</artifactId>
+	</dependency>
   </dependencies>
   
   <build>
