--- a/pizzeria-maven/pizzeria-service/pom.xml
+++ b/pizzeria-maven/pizzeria-service/pom.xml
@@ -20,7 +20,11 @@
 	<dependency>
     <groupId>org.apache.commons</groupId>
     <artifactId>commons-collections4</artifactId>
-</dependency>
+	</dependency>
+	<dependency>
+	    <groupId>org.hibernate.javax.persistence</groupId>
+	    <artifactId>hibernate-jpa-2.1-api</artifactId>
+	</dependency>
 </dependencies>
 
 
