Encodage UTF8 et warning corriger

--- a/pizzeria-maven/pom.xml
+++ b/pizzeria-maven/pom.xml
@@ -13,6 +13,7 @@
 
 <properties>
 	<reflection.vers>0.9.10</reflection.vers>
+   <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 </properties>
 
 <dependencyManagement>
