debut mise en place appli coter client

--- a/pizzeria-maven/pom.xml
+++ b/pizzeria-maven/pom.xml
@@ -9,6 +9,7 @@
 <module>pizzeria-ihm</module>
 <module>pizzeria-model</module>
 <module>pizzeria-service</module>
+<module>pizzeria-client</module>
 </modules>
 
 <properties>
