--- a/pizzeria-maven/pizzeria-admin-web/pom.xml
+++ b/pizzeria-maven/pizzeria-admin-web/pom.xml
@@ -23,6 +23,14 @@
 	    <groupId>org.hibernate</groupId>
 	    <artifactId>hibernate-entitymanager</artifactId>
 	</dependency>
+	<dependency>
+        <groupId>jstl</groupId>
+        <artifactId>jstl</artifactId>
+    </dependency>
+    <dependency>
+		<groupId>org.apache.commons</groupId>
+		<artifactId>commons-lang3</artifactId>
+	</dependency>
   </dependencies>
   
   
