--- a/pizzeria-maven/pizzeria-admin-web/src/main/webapp/WEB-INF/web.xml
+++ b/pizzeria-maven/pizzeria-admin-web/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,15 @@
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
   
+    <filter>
+	<filter-name>SessionFilter</filter-name>
+	<filter-class>dta.SessionFilter</filter-class>
+</filter>
+  <filter-mapping>
+	<filter-name>SessionFilter</filter-name>
+	<url-pattern>/*</url-pattern>
+</filter-mapping>
+  
   <servlet>
   	<servlet-name>MaServlet</servlet-name>
   	<servlet-class>dta.MaServlet</servlet-class>
@@ -25,6 +34,11 @@
   	<servlet-name>EditPizzaController</servlet-name>
   	<servlet-class>dta.EditPizzaController</servlet-class>
   </servlet>
+   <servlet>
+  	<servlet-name>ConnectionController</servlet-name>
+  	<servlet-class>dta.ConnectionController</servlet-class>
+  </servlet>
+
   
   <servlet-mapping>
     <servlet-name>MaServlet</servlet-name>
@@ -45,6 +59,10 @@
   <servlet-mapping>
     <servlet-name>EditPizzaController</servlet-name>
   	<url-pattern>/editPizza</url-pattern>
+  </servlet-mapping>
+    <servlet-mapping>
+    <servlet-name>ConnectionController</servlet-name>
+  	<url-pattern>/login</url-pattern>
   </servlet-mapping>
   
 </web-app>
