--- a/pizzeria-maven/pizzeria-admin-web/pom.xml
+++ b/pizzeria-maven/pizzeria-admin-web/pom.xml
@@ -31,6 +31,14 @@
 		<groupId>org.apache.commons</groupId>
 		<artifactId>commons-lang3</artifactId>
 	</dependency>
+	<dependency>
+	   <groupId>javax.enterprise</groupId>
+	   <artifactId>cdi-api</artifactId>
+	</dependency>
+	<dependency>
+	   	<groupId>javax.enterprise</groupId>
+	   	<artifactId>cdi-api</artifactId>
+	</dependency>
   </dependencies>
   
   
