--- a/pizzeria-maven/pizzeria-service/pom.xml
+++ b/pizzeria-maven/pizzeria-service/pom.xml
@@ -25,6 +25,10 @@
 	    <groupId>org.hibernate.javax.persistence</groupId>
 	    <artifactId>hibernate-jpa-2.1-api</artifactId>
 	</dependency>
+		<dependency>
+	   	<groupId>javax.enterprise</groupId>
+	   	<artifactId>cdi-api</artifactId>
+	</dependency>
 </dependencies>
 
 
