--- a/pizzeria-maven/pom.xml
+++ b/pizzeria-maven/pom.xml
@@ -68,22 +68,30 @@
 	    <groupId>org.hibernate.javax.persistence</groupId>
 	    <artifactId>hibernate-jpa-2.1-api</artifactId>
 	    <version>1.0.0.Final</version>
+	    <scope>provided</scope>
 	</dependency>
 	<dependency>
 	    <groupId>org.hibernate</groupId>
 	    <artifactId>hibernate-entitymanager</artifactId>
 	    <version>5.1.0.Final</version>
+	    <scope>provided</scope>
 	</dependency>
 	<dependency>
 	   <groupId>javax.servlet</groupId>
 	   <artifactId>javax.servlet-api</artifactId>
 	   <version>3.1.0</version>
+	   <scope>provided</scope>
 	</dependency>
 	<dependency>
         <groupId>jstl</groupId>
         <artifactId>jstl</artifactId>
         <version>1.2</version>
     </dependency>
+    <dependency>
+   <groupId>javax.enterprise</groupId>
+   <artifactId>cdi-api</artifactId>
+   <version>1.2</version>
+</dependency>
 </dependencies>
 </dependencyManagement>
 
@@ -102,6 +110,13 @@
 					<artifactId>maven-jar-plugin</artifactId>
 					<version>2.4</version>
 				</plugin>
+				<plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-war-plugin</artifactId>
+                    <configuration>
+                        <failOnMissingWebXml>false</failOnMissingWebXml>
+                    </configuration>
+                </plugin>
 				<plugin>
        				<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-shade-plugin</artifactId>
