--- a/pizzeria-maven/pizzeria-admin-web/pom.xml
+++ b/pizzeria-maven/pizzeria-admin-web/pom.xml
@@ -39,6 +39,11 @@
 	   	<groupId>javax.enterprise</groupId>
 	   	<artifactId>cdi-api</artifactId>
 	</dependency>
+	<dependency>
+	   <groupId>javax</groupId>
+	   <artifactId>javaee-api</artifactId>
+	   <scope>provided</scope>
+	</dependency>
   </dependencies>
   
   
