--- a/pizzeria-maven/pizzeria-service/pom.xml
+++ b/pizzeria-maven/pizzeria-service/pom.xml
@@ -29,6 +29,11 @@
 	   	<groupId>javax.enterprise</groupId>
 	   	<artifactId>cdi-api</artifactId>
 	</dependency>
+	<dependency>
+	   <groupId>javax</groupId>
+	   <artifactId>javaee-api</artifactId>
+	   <scope>provided</scope>
+	</dependency>
 </dependencies>
 
 
