--- a/pizzeria-maven/pom.xml
+++ b/pizzeria-maven/pom.xml
@@ -92,6 +92,11 @@
    <artifactId>cdi-api</artifactId>
    <version>1.2</version>
 </dependency>
+<dependency>
+   <groupId>javax</groupId>
+   <artifactId>javaee-api</artifactId>
+   <version>7.0</version>
+</dependency>
 </dependencies>
 </dependencyManagement>
 
