JXA-RS + Spring test

--- a/pizzeria-maven/pizzeria-admin-web/pom.xml
+++ b/pizzeria-maven/pizzeria-admin-web/pom.xml
@@ -5,6 +5,7 @@
     <groupId>dta</groupId>
     <artifactId>pizzeria-maven</artifactId>
     <version>1.0</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
   <artifactId>pizzeria-admin-web</artifactId>
   <packaging>war</packaging>
