--- a/pizzeria-maven/pizzeria-service/pom.xml
+++ b/pizzeria-maven/pizzeria-service/pom.xml
@@ -4,6 +4,7 @@
     <groupId>dta</groupId>
     <artifactId>pizzeria-maven</artifactId>
     <version>1.0</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
   <artifactId>pizzeria-service</artifactId>
  
@@ -33,6 +34,10 @@
 	   <groupId>javax</groupId>
 	   <artifactId>javaee-api</artifactId>
 	   <scope>provided</scope>
+	</dependency>
+	    <dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-context</artifactId>
 	</dependency>
 </dependencies>
 
