--- a/pizzeria-maven/pizzeria-spring/pom.xml
+++ b/pizzeria-maven/pizzeria-spring/pom.xml
@@ -36,5 +36,9 @@
 		<groupId>mysql</groupId>
 		<artifactId>mysql-connector-java</artifactId>
 	</dependency>
+	<dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-test</artifactId>
+    </dependency>
   </dependencies>
 </project>
